metadata/force-app/main/default/objects/CustomName_zjnKv__c/CustomName_zjnKv__c.object-meta.xml
<CustomObject>
    <description>Description_ohsrn</description>
    <label>CustomLabel_vLdaq</label>
    <nameField>
        <label>CustomLabel_vLdaq</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_vLdaqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>