metadata/force-app/main/default/objects/CustomName_zjnKv__c/fields/CustomField_OuJaD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_OuJaD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldokxnQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>