metadata/force-app/main/default/objects/CustomName_zjnKv__c/fields/CustomField_zTlAT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zTlAT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldzJGaE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>